--- a/src/XFExpandableListView/Cells/CorrectExpandableGroupCell.xaml
+++ b/src/XFExpandableListView/Cells/CorrectExpandableGroupCell.xaml
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <ViewCell xmlns="http://xamarin.com/schemas/2014/forms"
           xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-          x:Class="XFExpandableListView.Cells.CorrectExpandableGroupCell">
+          x:Class="XFExpandableListView.Cells.CorrectExpandableGroupCell"
+          Height="30">
     <!-- Default VM for this cell is ExpandableGroup -->
     <ViewCell.View>
         <StackLayout>
